@@ -7458,6 +7458,13 @@ Choose between popup, inline and off</p></div>
 <div class="content">
 <pre><tt>show_long_plugin_output = popup</tt></pre>
 </div></div>
+<h4 id="_show_modified_attributes">show_modified_attributes</h4>
+<div class="paragraph"><p>Show if a host / service has modified attributes.</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>show_modified_attributes = 1</tt></pre>
+</div></div>
 <h4 id="_info_popup_event_type">info_popup_event_type</h4>
 <div class="paragraph"><p>On which event should the comments / downtime or longpluginout popup
 show up. Valid values are onclick or onmouseover.</p></div>
@@ -8244,7 +8251,7 @@ You can now add the /home/thruk/var/remote.sock to your thruk_local.conf.</p></d
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-08-22 15:31:58 CEST
+Last updated 2011-08-22 22:15:17 CEST
 </div>
 </div>
 </body>
