@@ -243,10 +243,12 @@
                             <td class='dataVar'>Last Update:</td>
                             <td class='dataVal'>[% date_format(c, date.now) %]&nbsp;&nbsp;( 0d 0h 0m 0s ago)</td>
                           </tr>
+                          [% IF show_modified_attributes %]
                           <tr>
                             <td class='dataVar'>Modified Attributes</td>
                             <td class='dataVal'>[% IF host.modified_attributes_list.size > 0 %]<div class='serviceWARNING' style="padding-right: 4px; padding-left: 4px;">[% host.modified_attributes_list.join(', ') %]</div>[% ELSE %]none[% END %]</td>
                           </tr>
+                          [% END %]
                           [% IF backends && backends.size > 1 %]
                           <tr>
                             <td class='dataVar'>Monitored by:</td>
