@@ -202,6 +202,9 @@ shown_inline_pnp = 1
 #show_custom_vars = _VAR1
 #show_custom_vars = _VAR2
 
+# show if a host / service has modified attributes.
+show_modified_attributes = 1
+
 
 ######################################
 # Command Settings
